# background-manager

./: init.sql  justfile  package.json  vite.config.ts
prompts/: frontend.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: prelude.rs  tasks.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20260215_162036_create_table.rs  m20260216_044926_create_table.rs  m20260218_042706_col_no_console.rs  m20260218_141207_col_working_dir.rs  m20260222_084716_col_env_vars.rs  m20260315_000001_col_sort_order.rs
src-tauri/src/: app_state.rs  commands.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  schedule.rs  task.rs  tray.rs  utils.rs
src-tauri/src/entity/: mod.rs  prelude.rs  tasks.rs
src/components/: AppConfigDialog.tsx  TaskEditDialog.tsx  TaskList.tsx
src/components/ui/: button.tsx  input.tsx  select.tsx  switch.tsx
src/i18n/: config.ts
src/i18n/locales/: en.json  zh.json
src/lib/: api.ts  hooks.ts
src/types/: config.ts  task.ts
