[package]
name = "background-manager"
version.workspace = true
authors.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
description = "A Tauri App"
authors = ["azazo1"]
readme = "../README.md"
edition = "2024"

[workspace]
members = [".", "migration", "entity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "background_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.43", features = ["serde"] }
sea-orm = { version = "2.0.0-rc", features = [
    "runtime-tokio",
    "sqlx-sqlite",
    "macros",
] }
thiserror = "2.0.18"
toml = "1.0.1"
dirs-next = "2.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
tokio = { version = "1.49.0", features = ["fs", "macros", "process"] }
url = "2.5.8"
bon = "3.9.0"
entity = { path = "entity" }
migration = { path = "migration" }
tauri-plugin-dialog = "2.6.0"
